add google image

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* globals.css */
 
-body{
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+body {
   background-color: black;
   color: white;
 }
